--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,40 @@
-h1 {
-  color: red;
+* {
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+}
+
+.content {
+  padding: 1rem;
+}
+
+.pokemons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  list-style: none;
+  padding: 0rem;
+  margin: 0;
+}
+
+.pokemon {
+  margin: 0.5rem;
+  padding: 1rem 1rem;
+  background-color: #49d0b0;
+  color: white;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.pokemon .number {
+  color: #7ba8d9;
+  text-align: right;
+}
+.pokemon .detail img {
+  max-width: 100%;
+  height: 80px;
+  align-self: flex-end;
+}
+.pokemon .types {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
