--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -6,22 +6,80 @@
   margin: 0;
 }
 
+.normal {
+  background-color: #a6a877;
+}
+.grass {
+  background-color: #77c850;
+}
+.fire {
+  background-color: #ee7f30;
+}
+.water {
+  background-color: #678fee;
+}
+.electric {
+  background-color: #f7cf2e;
+}
+.ice {
+  background-color: #98d5d7;
+}
+.ground {
+  background-color: #dfbf69;
+}
+.flying {
+  background-color: #a98ff0;
+}
+.poison {
+  background-color: #a040a0;
+}
+.foghting {
+  background-color: #bf3029;
+}
+.psychic {
+  background-color: #f65687;
+}
+.dark {
+  background-color: #725847;
+}
+.rock {
+  background-color: #b8a137;
+}
+.bug {
+  background-color: #a8b720;
+}
+.ghost {
+  background-color: #6e5896;
+}
+.steel {
+  background-color: #b9b7cf;
+}
+.dragon {
+  background-color: #6f38f6;
+}
+.fairy {
+  background-color: #f9aec7;
+}
+
 .pokemon {
+  text-transform: capitalize;
   margin: 0.5rem;
   padding: 1rem 1rem;
-  background-color: #49d0b0;
-
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
 }
+.pokemon::first-letter {
+  text-transform: uppercase;
+}
 .pokemon .number {
-  color: #7ba8d9;
+  color: #0d0d0e;
   text-align: right;
   font-size: 0.625rem;
 }
 
 .pokemon .name {
+  text-transform: capitalize;
   color: white;
   margin-bottom: 0.25rem;
 }
@@ -39,25 +97,18 @@
   list-style: none;
 }
 .pokemon .detail .types .type {
-  background-color: #5af3cf;
   font-size: 0.625rem;
   color: #fff;
   border-radius: 1rem;
-  padding: 0.2rem;
+  filter: brightness(1.1);
+  padding: 0.4rem;
   margin: 0.2rem;
+  text-align: center;
 }
 .pokemon .detail img {
   max-width: 100%;
   height: 70px;
   align-self: flex-end;
-}
-
-@media screen and (min-width: 992px) {
-  .pokemons {
-    max-width: 992px;
-    margin: 0 auto;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
 }
 
 @media screen and (max-width: 300px) {
@@ -66,5 +117,15 @@
     height: auto;
     max-width: 400px;
     margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 300px) {
+  .pokemons {
+    width: auto;
+
+    max-width: 800px;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
   }
 }
