--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -91,7 +91,6 @@
   align-items: center;
   justify-content: space-around;
 }
-
 .pokemon .detail .types {
   padding: 0;
   margin: 0;
@@ -107,28 +106,52 @@
   text-align: center;
 }
 .pokemon .detail img {
-  max-width: 100%;
-  height: 70px;
+  width: 80px;
+  max-height: 70px;
   align-self: flex-end;
 }
 
 /* displays */
-@media screen and (max-width: 300px) {
+@media screen and (min-width: 0px) {
   .pokemons {
     grid-template-columns: 1fr;
     height: auto;
-    max-width: 400px;
+    max-width: auto;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 400px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr;
+    height: auto;
+    max-width: auto;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 600px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr;
+    height: auto;
+    max-width: auto;
     margin: 0 auto;
   }
 }
 
-@media screen and (min-width: 300px) {
+@media screen and (min-width: 800px) {
   .pokemons {
-    width: auto;
-
-    max-width: 800px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: auto;
+    max-width: auto;
     margin: 0 auto;
-    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    height: auto;
+    max-width: auto;
+    margin: 0 auto;
   }
 }
 
@@ -141,6 +164,7 @@
   padding: 1rem;
 }
 
+/* button */
 .pagination button {
   border-radius: 1rem;
   text-align: center;
